Add history for project page
