# harvest-flow/api/src/controllers/nftHistory.ts
@@ -1,13 +1,14 @@
 import {Get, Query, Route} from "tsoa";
 import {Controller} from "@tsoa/runtime";
 import {NftHistory, NftHistoryEvent, NftHistoryEventType} from "@harvest-flow/utils";
-import {getHistoryForUser, requirePool} from "@harvest-flow/db";
+import {getHistoryForContract, getHistoryForUser, requirePool} from "@harvest-flow/db";
 
+const chainId = process.env.CHAIN_ID;
 
 @Route('nft_history')
 export class NftHistoryController extends Controller {
-    @Get()
-    public async get(@Query() userAddress: string): Promise<NftHistory> {
+    @Get("/user")
+    public async getUserHistory(@Query() userAddress: string): Promise<NftHistory> {
         const pool = requirePool();
 
         const userProjectHistoryRes = await getHistoryForUser.run(
@@ -29,6 +30,32 @@ export class NftHistoryController extends Controller {
 
         return {
             address: userAddress,
+            history: events
+        };
+    }
+
+    @Get("/project")
+    public async getProjectHistory(@Query() contractAddress: string): Promise<NftHistory> {
+        const pool = requirePool();
+
+        const userProjectHistoryRes = await getHistoryForContract.run(
+            { contract_address: contractAddress.toLowerCase(), chain_id: chainId },
+            pool
+        );
+
+        const events: NftHistoryEvent[] = userProjectHistoryRes.map((history) => {
+            return {
+                eventType: ToNftHistoryEventType(history.type),
+                price: history.amount,
+                transactionHash: history.tx_hash,
+                timestamp: Date.parse(history.timestamp.toISOString())
+            }
+        })
+
+        console.log(`events: ${events}`);
+
+        return {
+            address: contractAddress,
             history: events
         };
     }
